// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ArticleDate > ArticleDate初期値: createdAt, updatedAt (dummy) 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="_articleDate_ac3e38"
      >
        <img
          alt="日付"
          class="_baseImg_c19919 _sm_c19919 _baseTextDate_ac3e38"
          data-nimg="1"
          decoding="async"
          height="20"
          loading="lazy"
          src="/img/icon/date.svg?auto=format"
          srcset="/img/icon/date.svg?auto=format 1x, /img/icon/date.svg?auto=format 2x"
          style="color: transparent;"
          width="20"
        />
        <p
          class="_baseText_6eb572 _baseTextDate_ac3e38"
          data-testid="targetDateText"
        >
          作成日:
          2020/7/4
           ~ 更新日:
          2020/7/9
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="_articleDate_ac3e38"
    >
      <img
        alt="日付"
        class="_baseImg_c19919 _sm_c19919 _baseTextDate_ac3e38"
        data-nimg="1"
        decoding="async"
        height="20"
        loading="lazy"
        src="/img/icon/date.svg?auto=format"
        srcset="/img/icon/date.svg?auto=format 1x, /img/icon/date.svg?auto=format 2x"
        style="color: transparent;"
        width="20"
      />
      <p
        class="_baseText_6eb572 _baseTextDate_ac3e38"
        data-testid="targetDateText"
      >
        作成日:
        2020/7/4
         ~ 更新日:
        2020/7/9
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ArticleDate > ArticleDate初期値: createdAt, updatedAt (空文字) 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="_articleDate_ac3e38"
      >
        <img
          alt="日付"
          class="_baseImg_c19919 _sm_c19919 _baseTextDate_ac3e38"
          data-nimg="1"
          decoding="async"
          height="20"
          loading="lazy"
          src="/img/icon/date.svg?auto=format"
          srcset="/img/icon/date.svg?auto=format 1x, /img/icon/date.svg?auto=format 2x"
          style="color: transparent;"
          width="20"
        />
        <p
          class="_baseText_6eb572 _baseTextDate_ac3e38"
          data-testid="targetDateText"
        >
          作成日:
          --/--/--
           ~ 更新日:
          --/--/--
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="_articleDate_ac3e38"
    >
      <img
        alt="日付"
        class="_baseImg_c19919 _sm_c19919 _baseTextDate_ac3e38"
        data-nimg="1"
        decoding="async"
        height="20"
        loading="lazy"
        src="/img/icon/date.svg?auto=format"
        srcset="/img/icon/date.svg?auto=format 1x, /img/icon/date.svg?auto=format 2x"
        style="color: transparent;"
        width="20"
      />
      <p
        class="_baseText_6eb572 _baseTextDate_ac3e38"
        data-testid="targetDateText"
      >
        作成日:
        --/--/--
         ~ 更新日:
        --/--/--
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
